# bayesian_hpo

./: Quellen.txt
Bayesian Optimization/: Ausarbeitung_BO.txt
hyperparameter_optimization/: .gitconfig  .gitignore  Makefile  README.md  conda_requirements.txt  pyproject.toml  requirements.txt  setup.py
hyperparameter_optimization/docs/: Makefile  conf.py  index.rst  make.bat
hyperparameter_optimization/notebooks/: Untitled.ipynb  dev.ipynb  dev.py  explore_distr.ipynb  hyperop_sklearn_optimizer_example.py  hyperopt_sklearn_developer_example.py
hyperparameter_optimization/serialized_objects/: std_scaler_y.pkl
hyperparameter_optimization/src/data/: load_data.py  make_dataset.py
hyperparameter_optimization/src/functions/: helper_functions.py
hyperparameter_optimization/src/hpo/: hpo_main.py  hpo_objective.py  hyperopt_searchspaces.py
hyperparameter_optimization/src/hpo/on_hold/: hyperopt_sklearn_optimizer.py
hyperparameter_optimization/src/models/: model_evaluation.py  model_selection.py
hyperparameter_optimization/src/visualization/: plot_pred.py
